// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`guess_game_2_revisit_step_one_run: round_1 1`] = `
{
  "isDone": true,
  "requestPayload": {
    "question": "number between 0-100. Empty for simulate save/load",
  },
  "responsePayload": 5,
  "resumeId": "event_ask-0",
  "type": "event",
}
`;

exports[`guess_game_2_revisit_step_one_run: round_2 1`] = `
{
  "isDone": true,
  "requestPayload": {
    "question": "value 5 is < than the answer - number between 0-100",
  },
  "responsePayload": 20,
  "resumeId": "event_ask-1",
  "type": "event",
}
`;

exports[`guess_game_2_revisit_step_one_run: round_3 1`] = `
{
  "isDone": true,
  "requestPayload": {
    "question": "value 20 is > than the answer - number between 0-100",
  },
  "responsePayload": 10,
  "resumeId": "event_ask-2",
  "type": "event",
}
`;

exports[`guess_game_2_revisit_step_one_run: round_4 1`] = `
{
  "isDone": true,
  "requestPayload": {
    "question": "value 10 is < than the answer - number between 0-100",
  },
  "responsePayload": 15,
  "resumeId": "event_ask-3",
  "type": "event",
}
`;

exports[`guess_game_2_revisit_step_one_run: guess_game_one_run 1`] = `
{
  "cache": {
    "_seq": 9,
  },
  "logs": [
    {
      "_step": "step_ask",
      "type": "transition",
      "values": {
        "from": "step_begin",
        "stepSeq": 1,
        "to": "step_ask",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_begin",
      "values": {
        "resumeId": "event_ask-0",
        "type": "event",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_end",
      "values": {
        "resumeId": "event_ask-0",
      },
    },
    {
      "_step": "step_check",
      "type": "transition",
      "values": {
        "from": "step_ask",
        "stepSeq": 2,
        "to": "step_check",
      },
    },
    {
      "_step": "step_ask",
      "type": "transition",
      "values": {
        "from": "step_check",
        "stepSeq": 3,
        "to": "step_ask",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_begin",
      "values": {
        "resumeId": "event_ask-1",
        "type": "event",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_end",
      "values": {
        "resumeId": "event_ask-1",
      },
    },
    {
      "_step": "step_check",
      "type": "transition",
      "values": {
        "from": "step_ask",
        "stepSeq": 4,
        "to": "step_check",
      },
    },
    {
      "_step": "step_ask",
      "type": "transition",
      "values": {
        "from": "step_check",
        "stepSeq": 5,
        "to": "step_ask",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_begin",
      "values": {
        "resumeId": "event_ask-2",
        "type": "event",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_end",
      "values": {
        "resumeId": "event_ask-2",
      },
    },
    {
      "_step": "step_check",
      "type": "transition",
      "values": {
        "from": "step_ask",
        "stepSeq": 6,
        "to": "step_check",
      },
    },
    {
      "_step": "step_ask",
      "type": "transition",
      "values": {
        "from": "step_check",
        "stepSeq": 7,
        "to": "step_ask",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_begin",
      "values": {
        "resumeId": "event_ask-3",
        "type": "event",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_end",
      "values": {
        "resumeId": "event_ask-3",
      },
    },
    {
      "_step": "step_check",
      "type": "transition",
      "values": {
        "from": "step_ask",
        "stepSeq": 8,
        "to": "step_check",
      },
    },
    {
      "_step": "step_end",
      "type": "transition",
      "values": {
        "from": "step_check",
        "stepSeq": 9,
        "to": "step_end",
      },
    },
  ],
  "state": {
    "answer": [
      5,
      20,
      10,
      15,
    ],
    "hint": "",
    "number": 15,
  },
  "step": "step_end",
  "system": {
    "1:step_ask:event:event_ask": {
      "isDone": true,
      "requestPayload": {
        "question": "number between 0-100. Empty for simulate save/load",
      },
      "responsePayload": 5,
      "resumeId": "event_ask-0",
      "type": "event",
    },
    "3:step_ask:event:event_ask": {
      "isDone": true,
      "requestPayload": {
        "question": "value 5 is < than the answer - number between 0-100",
      },
      "responsePayload": 20,
      "resumeId": "event_ask-1",
      "type": "event",
    },
    "5:step_ask:event:event_ask": {
      "isDone": true,
      "requestPayload": {
        "question": "value 20 is > than the answer - number between 0-100",
      },
      "responsePayload": 10,
      "resumeId": "event_ask-2",
      "type": "event",
    },
    "7:step_ask:event:event_ask": {
      "isDone": true,
      "requestPayload": {
        "question": "value 10 is < than the answer - number between 0-100",
      },
      "responsePayload": 15,
      "resumeId": "event_ask-3",
      "type": "event",
    },
  },
}
`;

exports[`guess_game_2_revisit_step_save_load_run: round_1 1`] = `
{
  "isDone": true,
  "requestPayload": {
    "question": "number between 0-100. Empty for simulate save/load",
  },
  "responsePayload": 5,
  "resumeId": "event_ask-0",
  "type": "event",
}
`;

exports[`guess_game_2_revisit_step_save_load_run: round_2 1`] = `
{
  "isDone": true,
  "requestPayload": {
    "question": "value 5 is < than the answer - number between 0-100",
  },
  "responsePayload": 45,
  "resumeId": "event_ask-1",
  "type": "event",
}
`;

exports[`guess_game_2_revisit_step_save_load_run: round_3 1`] = `
{
  "isDone": true,
  "requestPayload": {
    "question": "value 45 is < than the answer - number between 0-100",
  },
  "responsePayload": 75,
  "resumeId": "event_ask-2",
  "type": "event",
}
`;

exports[`guess_game_2_revisit_step_save_load_run: round_3_runinfo 1`] = `1`;

exports[`guess_game_2_revisit_step_save_load_run: round_4 1`] = `
{
  "isDone": true,
  "requestPayload": {
    "question": "value 75 is < than the answer - number between 0-100",
  },
  "responsePayload": 99,
  "resumeId": "event_ask-3",
  "type": "event",
}
`;

exports[`guess_game_2_revisit_step_save_load_run: round_4_runinfo 1`] = `1`;

exports[`guess_game_2_revisit_step_save_load_run: round_5 1`] = `
{
  "isDone": true,
  "requestPayload": {
    "question": "value 99 is > than the answer - number between 0-100",
  },
  "responsePayload": 95,
  "resumeId": "event_ask-4",
  "type": "event",
}
`;

exports[`guess_game_2_revisit_step_save_load_run: round_5_runinfo 1`] = `1`;

exports[`guess_game_2_revisit_step_save_load_run: guess_game_save_load_run 1`] = `
{
  "cache": {
    "_seq": 11,
  },
  "logs": [
    {
      "_step": "step_ask",
      "type": "transition",
      "values": {
        "from": "step_begin",
        "stepSeq": 1,
        "to": "step_ask",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_begin",
      "values": {
        "resumeId": "event_ask-0",
        "type": "event",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_end",
      "values": {
        "resumeId": "event_ask-0",
      },
    },
    {
      "_step": "step_check",
      "type": "transition",
      "values": {
        "from": "step_ask",
        "stepSeq": 2,
        "to": "step_check",
      },
    },
    {
      "_step": "step_ask",
      "type": "transition",
      "values": {
        "from": "step_check",
        "stepSeq": 3,
        "to": "step_ask",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_begin",
      "values": {
        "resumeId": "event_ask-1",
        "type": "event",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_end",
      "values": {
        "resumeId": "event_ask-1",
      },
    },
    {
      "_step": "step_check",
      "type": "transition",
      "values": {
        "from": "step_ask",
        "stepSeq": 4,
        "to": "step_check",
      },
    },
    {
      "_step": "step_ask",
      "type": "transition",
      "values": {
        "from": "step_check",
        "stepSeq": 5,
        "to": "step_ask",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_begin",
      "values": {
        "resumeId": "event_ask-2",
        "type": "event",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_end",
      "values": {
        "resumeId": "event_ask-2",
      },
    },
    {
      "_step": "step_check",
      "type": "transition",
      "values": {
        "from": "step_ask",
        "stepSeq": 6,
        "to": "step_check",
      },
    },
    {
      "_step": "step_ask",
      "type": "transition",
      "values": {
        "from": "step_check",
        "stepSeq": 7,
        "to": "step_ask",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_begin",
      "values": {
        "resumeId": "event_ask-3",
        "type": "event",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_end",
      "values": {
        "resumeId": "event_ask-3",
      },
    },
    {
      "_step": "step_check",
      "type": "transition",
      "values": {
        "from": "step_ask",
        "stepSeq": 8,
        "to": "step_check",
      },
    },
    {
      "_step": "step_ask",
      "type": "transition",
      "values": {
        "from": "step_check",
        "stepSeq": 9,
        "to": "step_ask",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_begin",
      "values": {
        "resumeId": "event_ask-4",
        "type": "event",
      },
    },
    {
      "_step": "step_ask",
      "type": "interrupt_end",
      "values": {
        "resumeId": "event_ask-4",
      },
    },
    {
      "_step": "step_check",
      "type": "transition",
      "values": {
        "from": "step_ask",
        "stepSeq": 10,
        "to": "step_check",
      },
    },
    {
      "_step": "step_end",
      "type": "transition",
      "values": {
        "from": "step_check",
        "stepSeq": 11,
        "to": "step_end",
      },
    },
  ],
  "state": {
    "answer": [
      5,
      45,
      75,
      99,
      95,
    ],
    "hint": "",
    "number": 95,
  },
  "step": "step_end",
  "system": {
    "1:step_ask:event:event_ask": {
      "isDone": true,
      "requestPayload": {
        "question": "number between 0-100. Empty for simulate save/load",
      },
      "responsePayload": 5,
      "resumeId": "event_ask-0",
      "type": "event",
    },
    "3:step_ask:event:event_ask": {
      "isDone": true,
      "requestPayload": {
        "question": "value 5 is < than the answer - number between 0-100",
      },
      "responsePayload": 45,
      "resumeId": "event_ask-1",
      "type": "event",
    },
    "5:step_ask:event:event_ask": {
      "isDone": true,
      "requestPayload": {
        "question": "value 45 is < than the answer - number between 0-100",
      },
      "responsePayload": 75,
      "resumeId": "event_ask-2",
      "type": "event",
    },
    "7:step_ask:event:event_ask": {
      "isDone": true,
      "requestPayload": {
        "question": "value 75 is < than the answer - number between 0-100",
      },
      "responsePayload": 99,
      "resumeId": "event_ask-3",
      "type": "event",
    },
    "9:step_ask:event:event_ask": {
      "isDone": true,
      "requestPayload": {
        "question": "value 99 is > than the answer - number between 0-100",
      },
      "responsePayload": 95,
      "resumeId": "event_ask-4",
      "type": "event",
    },
  },
}
`;
